Force text to wrap inside Alert. Fixes #847.

--- a/src/Alert/Alert.css
+++ b/src/Alert/Alert.css
@@ -11,6 +11,7 @@
     display: flex;
     white-space: pre-wrap;
     align-items: center;
+    word-break: break-all;
 }
 
 .success {
